--- a/wa.user.styl
+++ b/wa.user.styl
@@ -151,6 +151,7 @@ i = !important;
         --sh-h         : sh-h;
         --bshadow      : 0 2px 4px var(--shadow);
 
+        /// WhatsApp variables.
         --beige: #e5ddd5;
         --beige-rgb: 229, 221, 213;
         --black: #000;
@@ -163,8 +164,8 @@ i = !important;
         --blue-ocean-rgb: 170, 218, 255;
         --blue-sky: #9DE1FE;
         --blue-sky-rgb: 157, 225, 254;
-        --dark: #263238;
-        --dark-rgb: 38, 50, 56;
+        --dark: var(--dark);
+        --dark-rgb: var(--dark--rgb);
         --gray-30: #f7f7f7;
         --gray-30-rgb: 247, 247, 247;
         --gray-60: #f0f0f0;
@@ -333,22 +334,22 @@ i = !important;
         --icon-disabled-rgb: 201, 201, 201;
         --icon-fixed: #919191;
         --icon-fixed-rgb: 145, 145, 145;
-        // --icon-lighter: rgba(var(--lighter-rgb), 0.3); /* rgba(0, 0, 0, 0.3) */
-        --icon-lighter-rgb: var(--dark); /* 0, 0, 0; */
+        --icon-lighter: var(--lighter);
+        --icon-lighter-rgb: var(--lighter-rgb);
         --icon-search-back: #33b7f6;
         --icon-search-back-rgb: 51, 183, 246;
         --icon-strong: #333;
         --icon-strong-rgb: 51, 51, 51;
         --incoming-background: var(--dark); /* #fff */
-        --incoming-background-rgb: var(--dark-rgb); /* 255, 255, 255; */
+        --incoming-background-rgb: var(--dark--rgb); /* 255, 255, 255; */
         --incoming-background-deeper:  var(--darker); /* #f0f0f0 */
         --incoming-background-deeper-rgb: 240, 240, 240;
         --incoming-primary: #989898;
         --incoming-primary-rgb: 152, 152, 152;
         --input-placeholder: var(--light); /* #999 */
         --input-placeholder-rgb: 153, 153, 153;
-        --intro-background: #f8f9fa;
-        --intro-background-rgb: 248, 249, 250;
+        --intro-background: var(--dark);
+        --intro-background-rgb: var(--dark--rgb);
         --inverse: var(--dark); /* #fff */
         --inverse-rgb: 255, 255, 255;
         --link: #039BE5;
@@ -364,7 +365,7 @@ i = !important;
         --media-editor-control: #1c313f;
         --media-editor-control-rgb: 28, 49, 63;
         --media-viewer-background: var(--dark); /* #fff */
-        --media-viewer-background-rgb: 255, 255, 255;
+        --media-viewer-background-rgb: var(--dark--rgb);
         // --message-placeholder-icon: rgba(48, 48, 48, 0.3);
         --message-placeholder-icon-rgb: 48, 48, 48;
         --menu-tabs-list-active: #6cea91;
@@ -382,7 +383,7 @@ i = !important;
         --outgoing-background: var(--darker); /* #DCF8C6 */
         --outgoing-background-rgb: var(--darken-rgb); /* 220, 248, 198; */
         --outgoing-background-deeper: var(--dark); /* #cfe9ba */
-        --outgoing-background-deeper-rgb: var(--dark-rgb); /* 207, 233, 186; */
+        --outgoing-background-deeper-rgb: var(--dark--rgb); /* 207, 233, 186; */
         --overlay: #000;
         --overlay-rgb: 0, 0, 0;
         --panel-background: var(--darken); /* #ededed */
@@ -421,8 +422,8 @@ i = !important;
         --primary-strong-rgb:  var(--light-rgb); /* 0, 0, 0; */
         --primary-stronger: var(--light); /* #303030 */
         --primary-stronger-rgb: var(--light-rgb); /* 48, 48, 48; */
-        --primary-title: #525252;
-        --primary-title-rgb: 81.65, 81.65, 81.65;
+        --primary-title: var(--light);
+        --primary-title-rgb: var(--light-rgb);
         --product-thumb-background: #ededed;
         --product-thumb-background-rgb: 237, 237, 237;
         --ptt-blue: var(--accent); /* #4FC3F7 */
@@ -435,14 +436,14 @@ i = !important;
         --ptt-green-rgb: 9, 210, 97;
         --rich-text-panel-background: var(--darker) ;/* #f0f0f0 */
         --rich-text-panel-background-rgb: 240, 240, 240;
-        // --secondary: rgba(var(--light-rgb), 0.6); /* rgba(0, 0, 0, 0.6) */
-        --secondary-rgb: 0, 0, 0;
+        --secondary: var(--lighter);
+        --secondary-rgb: var(--lighter-rgb);
         // --secondary-light: rgba(var(--light-rgb), 0.25); /* rgba(0, 0, 0, 0.25) */
         --secondary-light-rgb: 0, 0, 0;
-        // --secondary-lighter: rgba(var(--light-rgb), 0.45); /* rgba(0, 0, 0, 0.45); */
-        --secondary-lighter-rgb: 0, 0, 0;
-        // --secondary-stronger: rgba(var(--light-rgb), 0.8); /* rgba(0, 0, 0, 0.8); */
-        --secondary-stronger-rgb: 0, 0, 0;
+        --secondary-lighter: var(--lighter);
+        --secondary-lighter-rgb: var(--lighter-rgb)
+        --secondary-stronger: var(--light);
+        --secondary-stronger-rgb: var(--light-rgb);
         --shadow: #000;
         --shadow-rgb: 0, 0, 0;
         // --shadow-light: rgba(0, 0, 0, 0.08);
