--- a/wa.user.styl
+++ b/wa.user.styl
@@ -193,8 +193,8 @@ if ( v3 == 1 ) {
         --red-rgb: 215, 0, 0;
         --red-light: #F44336;
         --red-light-rgb: 244, 67, 54;
-        --teal: #009688;
-        --teal-rgb: 0, 150, 136;
+        --teal: var(--accent);
+        --teal-rgb: var(--accent-rgb);
         --teal-light: #1DE9B6;
         --teal-light-rgb: 29, 233, 182;
         --teal-lighter: #00BFA5;
@@ -219,12 +219,12 @@ if ( v3 == 1 ) {
         --audio-track-incoming-rgb: 230, 230, 230;
         --audio-track-outgoing: #c6dfb2;
         --audio-track-outgoing-rgb: 198, 223, 178;
-        --avatar-background: #e6e6e6;
-        --avatar-background-rgb: 230, 230, 230;
-        --avatar-placeholder-background: #DFE5E7;
-        --avatar-placeholder-background-rgb: 223, 229, 231;
-        --avatar-placeholder-primary: var(--dark); /* #fff */
-        --avatar-placeholder-primary-rgb: 255, 255, 255;
+        --avatar-background: var(--darken); /// TODO: Add another bg color.
+        --avatar-background-rgb: var(--darken-rgb);
+        --avatar-placeholder-background: var(--darken);
+        --avatar-placeholder-background-rgb: var(--darken-rgb);
+        --avatar-placeholder-primary: var(--lighter);
+        --avatar-placeholder-primary-rgb: var(--lighter-rgb);
         --background-app: var(--dark); /* #e0e0e0 */
         --background-app-rgb: 224, 224, 224;
         --background-default: var(--dark); /* #fff */
@@ -241,24 +241,24 @@ if ( v3 == 1 ) {
         --border-default-rgb: 240, 240, 240;
         --border-input-active: #00BFA5;
         --border-input-active-rgb: 0, 191, 165;
-        --border-panel: var(--dark); /* #e0e0e0 */
-        --border-panel-rgb: 224, 224, 224;
-        --border-strong: #d9d9d9;
-        --border-strong-rgb: 217, 217, 217;
-        // --border-stronger: rgba(0, 0, 0, 0.08);
-        --border-stronger-rgb: 0, 0, 0;
-        --butterbar-background-battery: #fa685e;
-        --butterbar-background-battery-rgb: 249.69711, 103.94798, 93.50289;
-        --butterbar-background-connection: #FED859;
-        --butterbar-background-connection-rgb: 254, 216, 89;
-        --butterbar-background-default: #9DE1FE;
-        --butterbar-background-default-rgb: 157, 225, 254;
-        --butterbar-background-update: #1DE9B6;
-        --butterbar-background-update-rgb: 29, 233, 182;
-        // --butterbar-primary: rgba(48, 48, 48, 0.96);
-        --butterbar-primary-rgb: 48, 48, 48;
-        // --butterbar-secondary: rgba(48, 48, 48, 0.85);
-        --butterbar-secondary-rgb: 48, 48, 48;
+        --border-panel: var(--darker);
+        --border-panel-rgb: var(--darker-rgb);
+        --border-strong: var(--darker);
+        --border-strong-rgb: var(--darker-rgb);
+        --border-stronger: var(--darker);
+        --border-stronger-rgb: var(--darker-rgb);
+        --butterbar-background-battery: var(--red);
+        --butterbar-background-battery-rgb: var(--red-rgb);
+        --butterbar-background-connection: var(--yellow);
+        --butterbar-background-connection-rgb: var(--yellow-rgb);
+        --butterbar-background-default: var(--blue);
+        --butterbar-background-default-rgb: var(--blue-rgb);
+        --butterbar-background-update: var(--green);
+        --butterbar-background-update-rgb: var(--green-rgb);
+        --butterbar-primary: var(--white);
+        --butterbar-primary-rgb: var(--white-rgb);
+        --butterbar-secondary: var(--white); /// TODO: Add a shade of gray.
+        --butterbar-secondary-rgb: var(--white-rgb);
         --button-alternative: #00A5F4;
         --button-alternative-rgb: 0, 165, 244;
         --button-background-disabled: #e6e6e6;
@@ -269,18 +269,18 @@ if ( v3 == 1 ) {
         --media-viewer-button-background-rgb: 204, 204, 204;
         --media-viewer-button-icon: var(--dark); /* #fff */
         --media-viewer-button-icon-rgb: 255, 255, 255;
-        --button-primary: var(--dark); /* #fff */
-        --button-primary-rgb: 255, 255, 255;
-        --button-primary-background: #05cd51;
-        --button-primary-background-rgb: 5.44623, 204.85377, 81.46347;
+        --button-primary: var(--white);
+        --button-primary-rgb: var(--white-rgb);
+        --button-primary-background: var(--accent);
+        --button-primary-background-rgb: var(--accent-rgb);
         --button-primary-background-hover: #06d253;
         --button-primary-background-hover-rgb: 5.57831, 209.82169, 83.43905;
         --button-round-background: #09e85e;
         --button-round-background-rgb: 8.64769, 232.25231, 93.88923;
-        --button-secondary: #07BC4C;
-        --button-secondary-rgb: 7, 188, 76;
-        --button-secondary-background: var(--dark); /* #fff */
-        --button-secondary-background-rgb: 255, 255, 255;
+        --button-secondary: var(--lighter);
+        --button-secondary-rgb: var(--lighter-rgb);
+        --button-secondary-background: var(--darken);
+        --button-secondary-background-rgb: var(--darken-rgb);
         --button-secondary-hover: #05cd51;
         --button-secondary-hover-rgb: 5.44623, 204.85377, 81.46347;
         --chat-marker: var(--light); /* #999 */
@@ -295,10 +295,10 @@ if ( v3 == 1 ) {
         --compose-background-rgb: 255, 255, 255;
         // --compose-panel-background: rgba(255, 255, 255, 0.6);
         --compose-panel-background-rgb: 255, 255, 255;
-        --conversation-panel-background: var(--darken); /* #e5ddd5 */
-        --conversation-panel-background-rgb: 229, 221, 213;
-        // --conversation-panel-border: rgba(0, 0, 0, 0.03);
-        --conversation-panel-border-rgb: 0, 0, 0;
+        --conversation-panel-background: var(--dark);
+        --conversation-panel-background-rgb: var(--dark-rgb);
+        --conversation-panel-border: var(--darker);
+        --conversation-panel-border-rgb: var(--darker-rgb);
         --danger: #df3333;
         --danger-rgb: 223, 51, 51;
         --dropdown-background: var(--dark); /* #fff */
@@ -307,8 +307,8 @@ if ( v3 == 1 ) {
         --empty-state-icon-rgb: 255, 255, 255;
         // --focus: rgba(0, 165, 244, 0.4);
         --focus-rgb: 0, 165, 244;
-        --highlight: #009688;
-        --highlight-rgb: 0, 150, 136;
+        --highlight: var(--accent);
+        --highlight-rgb: var(--accent-rgb);
         --icon: #919191;
         --icon-rgb: 145, 145, 145;
         --icon-ack: var(--accent); /* #4FC3F7 */
@@ -353,12 +353,12 @@ if ( v3 == 1 ) {
         --message-placeholder-icon-rgb: 48, 48, 48;
         --menu-tabs-list-active: #6cea91;
         --menu-tabs-list-active-rgb: 108.28579, 234.05421, 145.4638;
-        // --modal-backdrop: rgba(255, 255, 255, 0.85);
-        --modal-backdrop-rgb: 255, 255, 255;
-        --modal-backdrop-solid: #ededed;
-        --modal-backdrop-solid-rgb: 237, 237, 237;
-        --modal-background: var(--dark); /* #fff */
-        --modal-background-rgb: 255, 255, 255;
+        --modal-backdrop: var(--dark);
+        --modal-backdrop-rgb: var(--dark-rgb);
+        --modal-backdrop-solid: var(--darken);
+        --modal-backdrop-solid-rgb: var(--darken-rgb);
+        --modal-background: var(--dark);
+        --modal-background-rgb: var(--dark-rgb);
         // --notification-biz-background: rgba(236, 250, 245, 0.95);
         --notification-biz-background-rgb: 236, 250, 245;
         // --notification-e2e-background: rgba(255, 245, 196, 0.95);
@@ -401,10 +401,10 @@ if ( v3 == 1 ) {
         --photopicker-overlay-background-rgb: 102, 102, 102;
         --primary: var(--lighten);
         --primary-rgb: 74, 74, 74;
-        --primary-strong: var(--lighter); /* #000 */
-        --primary-strong-rgb:  var(--light-rgb); /* 0, 0, 0; */
-        --primary-stronger: var(--light); /* #303030 */
-        --primary-stronger-rgb: var(--light-rgb); /* 48, 48, 48; */
+        --primary-strong: var(--light);
+        --primary-strong-rgb:  var(--light-rgb);
+        --primary-stronger: var(--light);
+        --primary-stronger-rgb: var(--light-rgb);
         --primary-title: var(--light);
         --primary-title-rgb: var(--light-rgb);
         --product-thumb-background: #ededed;
@@ -417,16 +417,16 @@ if ( v3 == 1 ) {
         --ptt-button-send-rgb: 9, 210, 97;
         --ptt-green: #09D261;
         --ptt-green-rgb: 9, 210, 97;
-        --rich-text-panel-background: var(--darker) ;/* #f0f0f0 */
-        --rich-text-panel-background-rgb: 240, 240, 240;
+        --rich-text-panel-background: var(--darken);
+        --rich-text-panel-background-rgb: var(--darken-rgb);
         --secondary: var(--lighter);
         --secondary-rgb: var(--lighter-rgb);
         // --secondary-light: rgba(var(--light-rgb), 0.25); /* rgba(0, 0, 0, 0.25) */
         --secondary-light-rgb: 0, 0, 0;
         --secondary-lighter: var(--lighter);
         --secondary-lighter-rgb: var(--lighter-rgb)
-        --secondary-stronger: var(--light);
-        --secondary-stronger-rgb: var(--light-rgb);
+        --secondary-stronger: var(--lighter);
+        --secondary-stronger-rgb: var(--lighter-rgb);
         --shadow: #000;
         --shadow-rgb: 0, 0, 0;
         // --shadow-light: rgba(0, 0, 0, 0.08);
@@ -455,14 +455,14 @@ if ( v3 == 1 ) {
         --teal-pale-rgb: 95, 185, 176;
         // --tooltip-background: rgba(89, 89, 89, 0.85);
         --tooltip-background-rgb: 89.25, 89.25, 89.25;
-        --unread-background: var(--dark); /* #fff */
-        --unread-background-rgb: 255, 255, 255;
-        // --unread-bar-background: rgba(255, 255, 255, 0.25);
-        --unread-bar-background-rgb: 255, 255, 255;
-        --unread-marker-background: var(--accent); /* #06d755 */
-        --unread-marker-background-rgb: 5.71038, 214.78962, 85.41462;
-        --unread-marker-text: var(--dark); /* #fff */
-        --unread-marker-text-rgb: 255, 255, 255;
+        --unread-background: var(--darken);
+        --unread-background-rgb: var(--darken-rgb);
+        --unread-bar-background: var(--darken);
+        --unread-bar-background-rgb: var(--darken-rgb);
+        --unread-marker-background: var(--accent);
+        --unread-marker-background-rgb: var(--accent-rgb);
+        --unread-marker-text: var(--white);
+        --unread-marker-text-rgb: var(--white-rgb);
         --video-player-background: #000;
         --video-player-background-rgb: 0, 0, 0;
         --video-primary: var(--dark); /* #fff */
@@ -499,12 +499,24 @@ if ( v3 == 1 ) {
         --lighter-rgb  : to_rgb(lighter);
         --accent       : accent i;
         --accent-rgb   : to_rgb(accent);
+        --white        : white;
+        --white-rgb    : to_rgb(white);
+        --red          : red;
+        --red-rgb      : to_rgb(red);
+        --green        : green;
+        --green-rgb    : to_rgb(green);
+        --blue         : blue;
+        --blue-rgb     : to_rgb(blue);
+        --yellow       : yellow;
+        --yellow-rgb   : to_rgb(yellow);
         --msg-l        : lighten(#2c313a, 5%);
         --msg-r        : lighten(#252a33, 4%);
         --t            : transparent;
         --shadow       : sh;
         --sh-h         : sh-h;
         --bshadow      : 0 2px 4px var(--shadow);
+        scrollbar-color: var(--darker) var(--shadow);
+        * { scrollbar-width: thin i }
     }
 
     body {
