modals: fix styles for view/send contact areas

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -773,11 +773,14 @@
                 box-shadow: inset 0 1px bd;
             }
         }
-        /// View contact.
-        ._1VwzF {
-            c: 0 0 t;
-            ._1VI-m { c: fg }
-            [role = 'button'] { c: 0 0 ac }
+         /// View/Send contact.
+        /._36ApL, /._3afBu, ._1VX5S {
+             c: 0 0 t;
+            box-shadow: none i;
+            div._19i9v { c: ac }
+            [class *= 'text'] { c: fg }
+            /// Send -> Footer.
+            /._2mZ8F { c: 0 0 hl }
         }
         /// Contact/group -> Profile image.
         ._8icek { fill-opacity: 0.55 }
