left: fix chat labels
Closes #147.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1134,6 +1134,8 @@
             }
             /// Remove background glitch of an empty element.
             ._2xINO { height: 0 }
+            /// WAB -> Fix chat labels. #147
+            /._1HeQs.AYtad { c: 0 0 bg }
         }
         /// Search contacts/messages.
         ._1AKfk {
