--- a/wa.user.styl
+++ b/wa.user.styl
@@ -401,7 +401,8 @@
                     display: block;
                     font-size: 16px;
                     margin-bottom: -16px;
-                    content: var(--message) var(--changes);
+                    white-space: pre-wrap;
+                    content: var(--message) ' \A\A ' var(--changes);
                 }
                 &::after {
                     display: block;
