chore: remove old vendor prefixes from keyframes

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -222,6 +222,7 @@
     outer   = 0 0 0 1px bd;
     inner   = inset outer;
     i       = !important;
+    vendors = official;
 
     // Color mixin.
     /// All colors: `c: fg bd bg;`
