meta: tweak title for media hover delay options

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -23,8 +23,8 @@
 
 @var checkbox chat_b_c   'Enable blurred contacts' 0
 @var checkbox chat_b_img 'Enable blurred images/videos' 0
-@var text     chat_b_in  'Chat blur hover-on delay' 0.4s
-@var text     chat_b_out 'Chat blur hover-off delay' 0.2s
+@var text     chat_b_in  'Images/videos hover-on delay' 0.4s
+@var text     chat_b_out 'Images/videos hover-off delay' 0.2s
 
 @var select   alerts     'Alerts' {
     'Show all                   *': 'show          ',
