--- a/wa.user.styl
+++ b/wa.user.styl
@@ -5,7 +5,7 @@
 @homepageURL  https://github.com/vednoc/dark-whatsapp
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
-@version      2.3.6
+@version      2.4.0
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
 @license      MIT
 @preprocessor stylus
@@ -191,9 +191,9 @@
         --ui-font   : ui_font, 'Segoe UI', 'Helvetica Neue', Helvetica,
             'Lucida Grande', Arial, Ubuntu, Cantarell, 'Fira Sans', sans-serif;
 
-        --version   : 'Dark-WhatsApp v2.3.6 — April 4th, 2020';
-        --message   : 'Fixing more bugs! 🎉 🥳 I published an important update about my userstyles, please read it: ';
-        --changes   : 'https://vednoc.me/blog/the-end-of-an-era';
+        --version   : 'Dark-WhatsApp v2.4.0 — April 21st, 2020';
+        --message   : 'Small maintenance update, more info in the changelog. 🎉 🥳 I rewrote my Dark-Instagram theme, check it out at link below.';
+        --changes   : 'https://github.com/vednoc/dark-instagram';
     }
 
     // Use stylus-lang variables with CSS variables.
