icons: fix colors for missed video call icon

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -963,8 +963,9 @@
         /// Exit/Report.
         &[data-icon = 'exit'],
         &[data-icon = 'thumbs-down'],
-        /// Delete chat/missed call.
+        /// Delete chat/missed voice/video call.
         &[data-icon = 'delete-danger'],
+        &[data-icon = 'status-miss_video'],
         &[data-icon ^= 'miss'] {
             path { v: red }
         }
