docs: update comment for message tails bug

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1274,7 +1274,7 @@
                 &._1baOM:not(#z) { c: 0 0 bd }
                 &._2-mCk, &.ZuHmv { c: 0 0 #55555510 }
                 /._3WZoe, ._1bcjS, ._2-rkJ::before { c: cm }
-                /// Fix incoming message's tails. @upstream
+                /// Fix tails for outgoing messages. @upstream
                 .tail-override-left [data-icon = 'tail-out'] {
                     transform: rotateY(180deg) i;
                 }
