right: fix background for checkmarks in links/docs

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1406,6 +1406,10 @@
             /// Selected media.
             /._2mlDB { c: 0 hl }
         }
+        [data-list-scroll-container] {
+            /// Reset background for checkmarks.
+            ._1o1sm::before { c: 0 0 t }
+        }
         /// App -> Fix left pane border.
         /._1-iDe._1xXdX ._2vPAk { border-right: 1px solid bd i}
         /// App -> Fix right pane border.
