left: enable right border only in compact mode

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1411,7 +1411,9 @@
             ._1o1sm::before { c: 0 0 t }
         }
         /// App -> Fix left pane border.
-        /._1-iDe._1xXdX ._2vPAk { border-right: 1px solid bd i}
+        @media screen and (max-width: app_c_m_w) {
+            /._1-iDe._1xXdX ._2vPAk { border-right: 1px solid bd i}
+        }
         /// App -> Fix right pane border.
         /._1-iDe._14VS3 > span { border-left: 1px solid bd }
     }
