left: fix colors for take/upload photo modals

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -733,6 +733,10 @@
                         box-shadow: bsh;
                     }
                 }
+                /// Settings -> Take photo left border.
+                &.r3Nu1, &._1dGTK { border-left: none i }
+                /// Settings -> Take photo footer.
+                /._3UUn3 { c: 0 0 hl }
             }
             /// Failed to connect.
             span[role = 'button'] { c: ac }
@@ -755,9 +759,10 @@
             ._2LALH {
                 c: 0 0 hl;
                 box-shadow: bsh;
+                span:hover { opacity: 0.6 }
             }
             /// Footer.
-            ._2HyTU, ._22aOT {
+            ._2hytu, ._22aOT {
                 min-height: 91px; /// NOTE: Border is hidden on default 90px.
                 c: 0 0 hl;
                 box-shadow: inset 0 1px bd;
