left: fix text color for 'typing...' element

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -423,7 +423,7 @@
         ._2a2hS { c: 0 0 bd }
 
         /// Left -> Typing indicator.
-        span[title *= 'typing...'], ._2ZAIy { c: ac }
+        span[title *= 'typing...'], .vdXUe { c: ac }
 
         /.matched {
             /// Global -> Matched text.
