chat: fix thumbnail colors in embeds

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1607,7 +1607,7 @@
             /._2DwXW { c: cm }
         }
         /// Embeds -> Thumbnail.
-        /._3_nIn { c: 0 0 #55555510 }
+        /._3_nIn, /._3Kp0Q { c: 0 0 #55555510 }
         /// Embeds -> Text.
         /a[href][target = '_blank'], /._2Lp2x {
             > * { c: cm }
