right: fix separator for documents

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1604,7 +1604,7 @@
         /._2RBFb {
             c: 0 0 bg;
             /// Stats.
-            /._2DwXW { c: cm }
+            /._2DwXW { &, span::before { c: cm }}
         }
         /// Embeds -> Thumbnail.
         /._3_nIn, /._3Kp0Q { c: 0 0 #55555510 }
